# GreyHound-hiring-desktop-app

./: .gitignore  README.md
GreyHound/: CMakeLists.txt  candidatecard.cpp  candidatecard.h  candidatedetailswindow.cpp  candidatedetailswindow.h  candidatedetailswindow.ui  customwidgets.cpp  customwidgets.h  employeeprofilewindow.cpp  employeeprofilewindow.h  employeeprofilewindow.ui  flowlayout.cpp  flowlayout.h  hashing.cpp  hashing.h  icons.qrc  loginpage.cpp  loginpage.h  loginpage.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordwarningdialog.cpp  passwordwarningdialog.h  profilepageforcandidate.cpp  profilepageforcandidate.h  profilepageforcandidate.ui  profilepageforemployer.cpp  profilepageforemployer.h  profilepageforemployer.ui  profilewindow.cpp  profilewindow.h  profilewindow.ui  (+43 more)
GreyHound/src/: candidatedetailswindow.cpp  hashing.h  loginpage.h  loginpage.ui  mainpage.cpp  mainpage.ui  mainwindow.h  mainwindow.ui  passwordwarningdialog.h  profilepageforcandidate.ui  profilepageforemployer.cpp  profilepageforemployer.ui  registerpageforcandidate.cpp  registerpageforemployer.h  registerpageforemployer.ui  registerstatus.cpp  registerstatus.h  resume.cpp  vacancydetailswindow.cpp  vacancydetailswindow.ui  validation.h
GreyHound/tests/: test_candidatecard.cpp  test_mainpage.cpp  test_profilepageforcandidate.cpp  test_profilepageforemployer.cpp  test_registercandidate.cpp  test_validation.cpp
backend/redis/: Dockerfile
backend/server/: CMakeLists.txt  config.json  main.cc
backend/server/controllers/: api_v1_Auth.cc  api_v1_Auth.h  api_v1_Notifications.cc  api_v1_Notifications.h  api_v1_profile.cc  api_v1_profile.h  api_v1_resources.cc  api_v1_resources.h
backend/server/filters/: api_v1_checkAuthFilter.cc  api_v1_checkAuthFilter.h
backend/server/models/: Bookmarks.cc  Bookmarks.h  Candidates.cc  Candidates.h  CandidatesSkills.cc  CandidatesSkills.h  EducStatuses.cc  EducStatuses.h  Employers.cc  Employers.h  Experience.cc  Experience.h  Invitations.cc  Invitations.h  Responces.cc  Responces.h  SearchStatuses.cc  SearchStatuses.h  Skills.cc  Skills.h  Users.cc  Users.h  Vacancies.cc  Vacancies.h  VacancySkills.cc  VacancySkills.h  WorkSchedule.cc  WorkSchedule.h  model.json
